--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@size-limit/preset-small-lib": "^4.6.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "cz-conventional-changelog": "3.3.0",
     "husky": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -63,5 +64,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "react-hook-form": "^6.8.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
