--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,12 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "react-app-polyfill": "^1.0.0"
+    "@hookform/resolvers": "^0.1.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "react-app-polyfill": "^1.0.0",
+    "react-hook-form": "^6.8.4",
+    "yup": "^0.29.3"
   },
   "alias": {
     "react": "../node_modules/react",
@@ -16,8 +21,10 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
+    "@material-ui/types": "^5.1.0",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
+    "@types/yup": "^0.29.7",
     "parcel": "^1.12.3",
     "typescript": "^3.4.5"
   }
