--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
+    "lint:fix": "tsdx lint --fix",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "@material-ui/core": ">=4.11.0",
+    "@material-ui/icons": ">=4.9.1",
+    "react-hook-form": ">=6.8.4"
   },
   "husky": {
     "hooks": {
@@ -30,7 +34,7 @@
   "prettier": {
     "printWidth": 80,
     "semi": true,
-    "singleQuote": true,
+    "singleQuote": false,
     "trailingComma": "es5"
   },
   "name": "rhf-mui",
