--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "react": ">=16",
     "@material-ui/core": ">=4.11.0",
     "@material-ui/icons": ">=4.9.1",
+    "react": ">=16",
     "react-hook-form": ">=6.8.4"
   },
   "husky": {
@@ -67,6 +67,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "react-hook-form": "^6.8.4"
   },
   "config": {
